EXTRA_DIST = README tutorials.h

INCLUDES = -I$(top_srcdir)/src/libs $(gwenhywfar_includes) -I$(srcdir)/..

noinst_PROGRAMS=\
  tutorial1 \
  tutorial2 \
  tutorial3 \
  tutorial4 \
  tutorial5

tutorial1_SOURCES=tutorial1.c
tutorial1_LDADD=\
  $(top_builddir)/src/libs/libaqbanking.la $(gwenhywfar_libs)

tutorial2_SOURCES=tutorial2.c
tutorial2_LDADD=\
  $(top_builddir)/src/libs/libaqbanking.la $(gwenhywfar_libs)

tutorial3_SOURCES=tutorial3.c
tutorial3_LDADD=\
  $(top_builddir)/src/libs/libaqbanking.la $(gwenhywfar_libs)

tutorial4_SOURCES=tutorial4.c
tutorial4_LDADD=\
  $(top_builddir)/src/libs/libaqbanking.la $(gwenhywfar_libs)

tutorial5_SOURCES=tutorial5.c
tutorial5_LDADD=\
  $(top_builddir)/src/libs/libaqbanking.la $(gwenhywfar_libs)


types:

typedefs:
